--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.0",
-    "pinia": "^2.1.0",
-    "element-plus": "^2.4.0",
     "@element-plus/icons-vue": "^2.3.0",
+    "@vueuse/core": "^10.5.0",
     "axios": "^1.6.0",
     "echarts": "^5.4.0",
+    "element-plus": "^2.4.0",
+    "pinia": "^2.1.0",
+    "vue": "^3.4.0",
     "vue-echarts": "^6.6.0",
-    "@vueuse/core": "^10.5.0"
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
@@ -26,11 +26,11 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "sass": "^1.77.0",
     "typescript": "~5.2.0",
-    "vite": "^5.0.0",
-    "vue-tsc": "^1.8.0",
-    "sass": "^1.69.0",
     "unplugin-auto-import": "^0.16.0",
-    "unplugin-vue-components": "^0.25.0"
+    "unplugin-vue-components": "^0.25.0",
+    "vite": "^5.0.0",
+    "vue-tsc": "^1.8.0"
   }
 }
